k8s_project_day/templates/app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obo
  labels:
    app: obo
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: obo
  template:
    metadata:
      labels:
        app: obo
    spec:
      containers:
        - name: obo-container
          image: 'quoctran08/obo:v1'
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: obo
  name: obo-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: obo
  type: ClusterIP
