k8s_project_day/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lb
  labels:
    app.kubernetes.io/name: ingress-lb
spec:
  ingressClassName: nginx
  rules:
  - host: "www.quoctran.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: obo-service
            port:
              number: 8080
